<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".AddTodoActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_title"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/edi_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edi_title"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        app:layout_constraintStart_toStartOf="@id/txt_title" />

    <TextView
        android:id="@+id/importance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importance"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edi_title"
        app:layout_constraintStart_toStartOf="@id/edi_title"
        android:layout_marginTop="30dp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/importance">
        <RadioButton
            android:id="@+id/low_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_btn" />
        <RadioButton
            android:id="@+id/middle_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle_btn" />
        <RadioButton
            android:id="@+id/high_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_btn" />
    </RadioGroup>

    <Button
        android:id="@+id/check_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_btn"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp" />



</androidx.constraintlayout.widget.ConstraintLayout>